<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_margin="10dp">
    
    <LinearLayout android:id="@+id/ll_cstm_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal">
        
        <TextView android:id="@+id/tv_cstm_food_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:layout_weight="0.6"/>
        
        <EditText android:id="@+id/edt_cstm_food_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:layout_weight="0.4"/>
    </LinearLayout>
    
        <LinearLayout android:id="@+id/ll_cstm_serving"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal"
        android:layout_below="@id/ll_cstm_name"
        android:layout_marginTop="10dp">
        
        <TextView android:id="@+id/tv_cstm_servin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/serving_size"
            android:layout_weight="0.6"
            android:layout_gravity="center_vertical"/>
        
        <Spinner android:id="@+id/sp_cstm_size"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="0.4"/>
    </LinearLayout>
    
        <LinearLayout android:id="@+id/ll_cstm_calori"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0"
        android:orientation="horizontal"
        android:layout_below="@id/ll_cstm_serving">
        
        <TextView android:id="@+id/tv_cstm_calori"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_calories"
            android:layout_weight="0.6"/>
        
        <EditText android:id="@+id/edt_cstm_calori"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_calories"
            android:layout_weight="0.4"/>
    </LinearLayout>
    
        <Button android:id="@+id/btn_cstm_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_cstm_calori"
            android:layout_centerHorizontal="true"
            android:text="@string/save"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

</RelativeLayout>
