<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="#ffffff" >

    <RelativeLayout
        android:id="@+id/rl_icons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_weight="0.25"
                android:src="#ff0066" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_weight="0.25"
                android:src="#ff00ff" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_weight="0.25"
                android:src="#ff00" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_weight="0.25"
                android:src="#ff00ff" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp" >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/rl_icons" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/rl_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true" >

                    <ImageView
                        android:id="@+id/img_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/circle" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/img_user"
                        android:gravity="center" >

                        <TextView
                            android:id="@+id/tv_user_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="Hello Jhone"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/img_bg_indicator"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_below="@id/tv_user_name"
                            android:layout_centerInParent="true"
                            android:src="#ff00" />

                        <TextView
                            android:id="@+id/tv_updated_date"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/img_bg_indicator"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="12/12/12" />
                    </RelativeLayout>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_bg_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/bg_level_title"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1.0" >

                        <TextView
                            android:id="@+id/tv_today_bg_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/today_subtitle"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_week_bg_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/last_week_subtitle"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:id="@+id/ll_bg_values"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="#ffffff"
                            android:orientation="horizontal"
                            android:weightSum="1.0" >

                            <TextView
                                android:id="@+id/tv_today_bg_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="180 ml/dL"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_week_bg_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="1500 ml/dL"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_dr_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/dr_visit_title"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1.0" >

                        <TextView
                            android:id="@+id/tv_next_visit_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/next_visit"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_last_visit_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/last_week_subtitle"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:id="@+id/ll_dr_values"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="#ffffff"
                            android:orientation="horizontal"
                            android:weightSum="1.0" >

                            <TextView
                                android:id="@+id/tv_next_dr_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="12/12/2014 12:20am"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_last_dr_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="10/12/2014 12:20am"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_cl_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/cl_counter_title"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:orientation="horizontal"
                        android:weightSum="1.0" >

                        <TextView
                            android:id="@+id/tv_today_cl_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/today_subtitle"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_week_cl_subtitle"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/last_week_subtitle"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/darker_gray"
                        android:orientation="horizontal" >

                        <LinearLayout
                            android:id="@+id/ll_cl_values"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:background="#ffffff"
                            android:orientation="horizontal"
                            android:weightSum="1.0" >

                            <TextView
                                android:id="@+id/tv_today_cl_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="1800 ml/dL"
                                android:textSize="22sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_week_cl_value"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="center"
                                android:padding="5dp"
                                android:text="1200 ml/dl"
                                android:textSize="22sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>